<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/recipeDisplayUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/recipe_display_user_name"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/recipeName"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/recipeDisplayUserName"
        app:layout_constraintStart_toStartOf="@+id/recipeDisplayUserName"
        app:layout_constraintTop_toBottomOf="@+id/recipeDisplayUserName" />

    <TextView
        android:id="@+id/recDisplayDescription"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/recipeDescription"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/recipeDisplayUserName"
        app:layout_constraintStart_toStartOf="@+id/recipeDisplayUserName"
        app:layout_constraintTop_toBottomOf="@+id/recDisplayName" />

    <ImageView
        android:id="@+id/recipeImageDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/sampleImage"
        app:layout_constraintEnd_toEndOf="@+id/recDisplayDescription"
        app:layout_constraintStart_toStartOf="@+id/recDisplayDescription"
        app:layout_constraintTop_toBottomOf="@+id/recDisplayDescription"
        app:srcCompat="@drawable/sample" />

    <Button
        android:id="@+id/more"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/more"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/recipeImageDisplay"
        app:layout_constraintStart_toStartOf="@+id/recipeImageDisplay"
        app:layout_constraintTop_toBottomOf="@+id/recipeImageDisplay" />

    <ImageView
        android:id="@+id/endline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/endLine"
        app:layout_constraintEnd_toEndOf="@+id/recDisplayDescription"
        app:layout_constraintStart_toStartOf="@+id/recDisplayDescription"
        app:layout_constraintTop_toBottomOf="@+id/more"
        app:srcCompat="@drawable/endline" />

</android.support.constraint.ConstraintLayout>
