<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditProfile"
    tools:showIn="@layout/app_bar_edit_profile">

    <TextView
        android:id="@+id/userIDTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/useridTextView"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/editProfileLogo"
        app:layout_constraintStart_toStartOf="@+id/editProfileLogo"
        app:layout_constraintTop_toBottomOf="@+id/editProfileLogo" />

    <ImageView
        android:id="@+id/editProfileLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/cagliostro"
        android:hint="@string/userid"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/userIDTextView"
        app:layout_constraintStart_toStartOf="@+id/userIDTextView"
        app:layout_constraintTop_toBottomOf="@+id/userIDTextView" />

    <TextView
        android:id="@+id/emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/emailid"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/userIDTextView"
        app:layout_constraintStart_toStartOf="@+id/userIDTextView"
        app:layout_constraintTop_toBottomOf="@+id/editUserID" />

    <TextView
        android:id="@+id/viewEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/editemailid"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editUserID"
        app:layout_constraintStart_toStartOf="@+id/editUserID"
        app:layout_constraintTop_toBottomOf="@+id/emailid" />

    <Button
        android:id="@+id/saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/side_nav_bar"
        android:fontFamily="@font/cagliostro"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/emailid"
        app:layout_constraintStart_toStartOf="@+id/emailid"
        app:layout_constraintTop_toBottomOf="@+id/viewEmailId" />

</android.support.constraint.ConstraintLayout>